# chatgpt

./: README.md  data.py  eval.py  predict.py  pyproject.toml  train.py
task1_pytorch/: environment.gpu.yml  environment.yml
task1_pytorch/scripts/: submit_train.slurm
task1_pytorch/task1_baseline/: __init__.py  model.py  utils.py
