[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task1-baseline"
version = "0.1.0"
description = "PyTorch baseline for ICASSP 2026 Task 1"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "torchvision",
  "Pillow",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["task1_baseline*"]
